# fourier_analysis_cpp

./: .gitignore  Alphas.cpp  Alphas.h  CMakeLists.txt  Chunker.hpp  Coefficient.cpp  Coefficient.h  CoefficientCollection.cpp  CoefficientCollection.h  FourierAnalysis.cpp  FourierAnalysis.h  LeakyBucket.hpp  ThreadSafeQueue.h  TrigonometricFunctionValues.cpp  TrigonometricFunctionValues.h  jeff.csv  main.cpp  result.hpp  test.cpp  viewer.html
JSDependancies/: jQueryCSV.js
JSDependencies/: tauProlog.js
